<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.MainActivity">

    <ImageView
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:src="@drawable/logo"
        android:contentDescription="@string/iv_content_description_row_of_books" />

    <Button
        android:id="@+id/btn_librarian_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_librarian_login" />

    <Button
        android:id="@+id/btn_student_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_student_login" />

    <Button
        android:id="@+id/btn_student_sign_up_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_student_sign_up" />


</LinearLayout>