<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.StudentLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_tag_student_login_page"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tv_profile_student_id"
        android:layout_width="320sp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints="enter da student id"
        android:hint="@string/et_hint_enter_student_id"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_student_password"
        android:layout_width="320sp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints="enter da password"
        android:hint="@string/et_hint_enter_student_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="320sp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_text_student_login" />

</LinearLayout>